# AliceLM

./: .CLAUDE.md.swp  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-mac.txt  requirements.txt
.github/workflows/: auto-codex-review.yml  deploy.yml
.windsurf/rules/: 1.md
alice/: __init__.py  errors.py
alice/agent/: __init__.py  core.py  mcp_client.py  permissions.py  run_logger.py  strategy.py  task_planner.py  tool_executor.py  tool_router.py  types.py
alice/control_plane/: __init__.py  control_plane.py  model_registry.py  prompt_store.py  service_factory.py  tool_registry.py  types.py
alice/eval/: __init__.py  models.py  runner.py  scorers.py
alice/one/: __init__.py  context.py  entrypoints.py  identity.py  timeline.py
alice/rag/: __init__.py  chroma_client.py  service.py
alice/search/: __init__.py  http_client.py  search_agent.py
apps/api/: deps.py  error_handlers.py  exceptions.py  main.py  schemas.py
apps/mcp/: __init__.py  server.py
apps/web/: .dockerignore  .env.production  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
config/: default.yaml  models.yaml  prompts.yaml  services.yaml
config/base/: prompts.yaml  tools.yaml
config/dev/: default.yaml
config/prod/: default.yaml
data/chroma/: chroma.sqlite3
data/transcripts/: BV16J4m1J71f.json  BV16J4m1J71f.txt  (+14 more)
docs/: 1204PLAN.md  AGENT_RESEARCH.md  ALICE_VISION_ANALYSIS.md  BACKEND_ARCHITECTURE.md  CODE_REVIEW.md  DEPLOYMENT.md  DESIGN.md  DESIGN_SYSTEM.md  FRONTEND_ARCHITECTURE.md  INSTALL-MAC.md  INSTALL.md  MULTI_SOURCE_REFACTOR.md  PRD.md  PRD_FRONTEND.md  PROMPT_FOR_GEMINI.md  README.md  ROADMAP.md  TEST_REPORT.md  UI_OPTIMIZATION_PLAN.md  figma-tokens.json
scripts/: cli.py  create-compatible-venv.sh  run-mac.sh  scan_favlist.py
tests/: conftest.py  test_alice_agent.py  test_alice_one.py  test_architecture_validation.py  test_control_plane.py  test_control_plane_api.py  test_phase0.py
(+187 files in other folders)
